...
            app:icon="@drawable/mozac_ic_qr_code_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signInInstructions" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInEmailButton"
            style="@style/NeutralButton"
            android:text="@string/sign_in_with_email"
            android:minHeight="48dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
